RESOLVED FIXED49269
AudioChannel.h is including AudioFloatArray.h instead of AudioArray.h
https://bugs.webkit.org/show_bug.cgi?id=49269
Summary AudioChannel.h is including AudioFloatArray.h instead of AudioArray.h
Chris Rogers
Reported 2010-11-09 12:13:19 PST
AudioChannel.h is including AudioFloatArray.h instead of AudioArray.h
Attachments
Patch (956 bytes, patch)
2010-11-09 12:15 PST, Chris Rogers
no flags
Chris Rogers
Comment 1 2010-11-09 12:15:12 PST
James Robinson
Comment 2 2010-11-09 12:27:10 PST
Comment on attachment 73399 [details] Patch R=me
WebKit Commit Bot
Comment 3 2010-11-09 12:44:47 PST
The commit-queue encountered the following flaky tests while processing attachment 73399 [details]: platform/mac/fast/events/objc-event-api.html fast/events/platform-wheelevent-in-scrolling-div.html Please file bugs against the tests. These tests were authored by aestes@apple.com, andersca@apple.com, hamaji@chromium.org, and mrowe@apple.com. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2010-11-09 13:02:27 PST
Comment on attachment 73399 [details] Patch Clearing flags on attachment: 73399 Committed r71670: <http://trac.webkit.org/changeset/71670>
WebKit Commit Bot
Comment 5 2010-11-09 13:02:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.