2010-11-09  Chris Rogers  <crogers@google.com>

Reviewed by James Robinson.

        AudioChannel.h is including AudioFloatArray.h instead of AudioArray.h
        https://bugs.webkit.org/show_bug.cgi?id=49269

        * platform/audio/AudioChannel.h:

Canonical link: https://commits.webkit.org/62154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71670 268f45cc-cd09-0410-ab3c-d52691b4dbfc